# DistributionalSemantics

./: .gitignore  CMakeLists.txt  main.cpp
Indexer/: IndexEntry.cpp  IndexEntry.h  Indexer.cpp  Indexer.h
Parser/: Parser.cpp  Parser.h  TwitterParser.cpp  TwitterParser.h
Scraper/: HttpRequest.cpp  HttpRequest.h  Scraper.cpp  Scraper.h
Utility/: Logger.h  Paragraph.cpp  Paragraph.h  Sentence.cpp  Sentence.h  Text.cpp  Text.h  Word.cpp  Word.h
